# prisma-notebooks

./: .gitignore  LICENSE  README.md  pyproject.toml
data/arxiv/: arxiv_papers.csv
data/github-issues/: github_issues.csv
docs/: a2a_remote_node.md  a2a_server.md  a2a_tool_provider.md  agent_eval.md  agent_identity.md  blind_review_pipeline.md  budget_governance.md  budget_graph_integration.md  composition_root.md  config_source_custom.md  config_source_env.md  guardrails_modernization.md  hierarchical_supervisor.md  kokoro_deliberation.md  loop_hardening.md  memory_management.md  meta_learner.md  multimodal_ingestion.md  multimodal_pipeline.md  node_typesafety.md  observability_integration.md  parallel_research_fanout.md  runtime_hardening.md  skill_creator_agent.md  skynet_direct_api.md  skynet_specialist_swarm.md  skynet_swarm.md  subagent_spawner.md  supervisor_quickstart.md  tool_provider_custom.md  tool_provider_host.md  vector_store_lancedb.md  visualize_graphs.md
docs/extension/: custom_node.md  custom_subgraph.md  discover_plugins_demo.md  langchain_migration.md
docs/multimodal/: 01_vision_agent.md  02_audio_agent.md  03_video_agent.md  (+2 more)
notebooks/: 00_index.ipynb  README.md  a2a_remote_node.ipynb  a2a_server.ipynb  a2a_tool_provider.ipynb  agent_eval.ipynb  agent_identity.ipynb  blind_review_pipeline.ipynb  budget_governance.ipynb  budget_graph_integration.ipynb  composition_root.ipynb  config_source_custom.ipynb  config_source_env.ipynb  guardrails_modernization.ipynb  hierarchical_supervisor.ipynb  kokoro_deliberation.ipynb  loop_hardening.ipynb  memory_management.ipynb  meta_learner.ipynb  multimodal_ingestion.ipynb  multimodal_pipeline.ipynb  node_typesafety.ipynb  observability_integration.ipynb  parallel_research_fanout.ipynb  runtime_hardening.ipynb  skill_creator_agent.ipynb  skynet_direct_api.ipynb  skynet_specialist_swarm.ipynb  skynet_swarm.ipynb  subagent_spawner.ipynb  supervisor_quickstart.ipynb  tool_provider_custom.ipynb  tool_provider_host.ipynb  vector_store_lancedb.ipynb  visualize_graphs.ipynb
(+71 files in other folders)
